# wasm-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.debug  README.md  Trunk.toml  index.html
.github/workflows/: ci.yml  deploy-website.yml
.runners/: Dockerfile  README.md  entrypoint.sh  supervisord.conf
.runners/scripts/: install-packages.sh
css/: assets.css  background.css  logo.css  scollbar.css  style.css
src/: main.rs  pages.rs  route.rs  utils.rs
src/js/: time.js
src/pages/: assortment.rs  error.rs  home.rs  mod.rs  product_list.rs
