[package]
name = "lyscm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
codegen-units = 1

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.81"
log = "0.4.6"
wasm-logger = "0.2.0"
gloo = "0.8"
yew-router = "0.16.0"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Window",
]
